fix body overflow under footer issue.

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 .body {
-  margin: 0px 10px;
+  margin: 0px 10px 100px 10px;
   text-align: center;
 }
 
